--- a/LinearList/Readme.ipynb
+++ b/LinearList/Readme.ipynb
@@ -367,75 +367,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "757d2eb3-d417-4b60-92a2-f26f0bde0ead",
+   "execution_count": 28,
+   "id": "7466a202-fe73-4b2a-bd3f-8988b252008f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error: switch `m' requires a value\n",
-      "usage: git commit [<options>] [--] <pathspec>...\n",
-      "\n",
-      "    -q, --quiet           suppress summary after successful commit\n",
-      "    -v, --verbose         show diff in commit message template\n",
-      "\n",
-      "Commit message options\n",
-      "    -F, --file <file>     read message from file\n",
-      "    --author <author>     override author for commit\n",
-      "    --date <date>         override date for commit\n",
-      "    -m, --message <message>\n",
-      "                          commit message\n",
-      "    -c, --reedit-message <commit>\n",
-      "                          reuse and edit message from specified commit\n",
-      "    -C, --reuse-message <commit>\n",
-      "                          reuse message from specified commit\n",
-      "    --fixup <commit>      use autosquash formatted message to fixup specified commit\n",
-      "    --squash <commit>     use autosquash formatted message to squash specified commit\n",
-      "    --reset-author        the commit is authored by me now (used with -C/-c/--amend)\n",
-      "    -s, --signoff         add Signed-off-by:\n",
-      "    -t, --template <file>\n",
-      "                          use specified template file\n",
-      "    -e, --edit            force edit of commit\n",
-      "    --cleanup <default>   how to strip spaces and #comments from message\n",
-      "    --status              include status in commit message template\n",
-      "    -S, --gpg-sign[=<key-id>]\n",
-      "                          GPG sign commit\n",
-      "\n",
-      "Commit contents options\n",
-      "    -a, --all             commit all changed files\n",
-      "    -i, --include         add specified files to index for commit\n",
-      "    --interactive         interactively add files\n",
-      "    -p, --patch           interactively add changes\n",
-      "    -o, --only            commit only specified files\n",
-      "    -n, --no-verify       bypass pre-commit and commit-msg hooks\n",
-      "    --dry-run             show what would be committed\n",
-      "    --short               show status concisely\n",
-      "    --branch              show branch information\n",
-      "    --ahead-behind        compute full ahead/behind values\n",
-      "    --porcelain           machine-readable output\n",
-      "    --long                show status in long format (default)\n",
-      "    -z, --null            terminate entries with NUL\n",
-      "    --amend               amend previous commit\n",
-      "    --no-post-rewrite     bypass post-rewrite hook\n",
-      "    -u, --untracked-files[=<mode>]\n",
-      "                          show untracked files, optional modes: all, normal, no. (Default: all)\n",
-      "\n"
+      "[main 8d8de1a] updated Readme.ipynb\n",
+      " 3 files changed, 459 insertions(+), 138 deletions(-)\n",
+      " delete mode 100644 \"LinearList/.ipynb_checkpoints/\\351\\241\\272\\345\\272\\217\\350\\241\\250-checkpoint.ipynb\"\n",
+      " create mode 100644 LinearList/Readme.ipynb\n",
+      " delete mode 100644 \"LinearList/\\351\\241\\272\\345\\272\\217\\350\\241\\250.ipynb\"\n"
      ]
     }
    ],
    "source": [
-    "!git commit -am"
+    "!git commit -a -m \"updated Readme.ipynb\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7466a202-fe73-4b2a-bd3f-8988b252008f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
